--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CS3100 Projects</title>
+    <title>DSA Projects</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,7 +23,7 @@
       <div class="projects-grid">
         <div class="project">
           <a
-            href="https://github.com/aliAljaffer/CS3100-PROJECTS/tree/main/Project%203"
+            href="https://github.com/aliAljaffer/DSA/tree/main/Project%203"
             target="_blank"
             ><h2 class="project-name">Sequence</h2></a
           >
@@ -46,7 +46,7 @@
         </div>
         <div class="project">
           <a
-            href="https://github.com/aliAljaffer/CS3100-PROJECTS/tree/main/Project%204"
+            href="https://github.com/aliAljaffer/DSA/tree/main/Project%204"
             target="_blank"
             ><h2 class="project-name">AVL Tree</h2></a
           >
@@ -67,7 +67,7 @@
 
         <div class="project">
           <a
-            href="https://github.com/aliAljaffer/CS3100-PROJECTS/tree/main/Project%205"
+            href="https://github.com/aliAljaffer/DSA/tree/main/Project%205"
             target="_blank"
             ><h2 class="project-name">Alphabet Trie</h2></a
           >
@@ -86,7 +86,7 @@
         </div>
         <div class="project">
           <a
-            href="https://github.com/aliAljaffer/CS3100-PROJECTS/tree/main/Project%206"
+            href="https://github.com/aliAljaffer/DSA/tree/main/Project%206"
             target="_blank"
             ><h2 class="project-name">Hashed Database</h2></a
           >
